# Flask-Shortcut

./: .buildinfo  .coveragerc  .gitignore  404.html  LICENSE  README.md  README.rst  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  strategy.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/autodoc/: flask_shortcut.doctree
.github/workflows/: main.yml
_modules/: index.html  typing.html
_modules/flask_shortcut/: logic.html  shortcut.html  util.html
_sources/autodoc/: flask_shortcut.rst.txt
autodoc/: flask_shortcut.html
docs/: conf.py  index.rst
flask_shortcut/: __init__.py  logic.py  shortcut.py  util.py
