[tool.poetry]
name = "flask_shortcut"
version = "0.1.0"
description = "Extension that provides an easy way to add dev-only shortcuts to your routes."
license = "MIT"
authors = ["Arne <arecknag@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/a-recknagel/Flask-Shortcut"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
packages = [
    { include = "flask_shortcut" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
requests = "^2.23.0"
sphinx = "^3.0.1"
Pallets-Sphinx-Themes = "^1.2.3"

[tool.black]
target-version = ["py38"]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
