[tool.poetry]
name = "flask_shortcut"
version = "0.3.2"
description = "Extension that provides an easy way to add dev-only shortcuts to your routes."
license = "MIT"
authors = ["Arne <arecknag@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/a-recknagel/Flask-Shortcut"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
packages = [
    { include = "flask_shortcut" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
click = "^7.1.1"
importlib-metadata = "^1.6.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
requests = "^2.23.0"
sphinx = "^3.0.1"
Pallets-Sphinx-Themes = "^1.2.3"
mypy = "^0.770"
pytest-coverage = "^0.0"
bandit = "^1.6.2"
liccheck = "^0.4.2"
safety = "^1.8.7"

[tool.black]
target-version = ["py36"]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
