[tool.poetry]
name = "flask_shortcut"
version = "0.4.0"
description = "Extension that provides an easy way to add dev-only shortcuts to your routes."
license = "MIT"
authors = ["Arne <arecknag@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/a-recknagel/Flask-Shortcut"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
packages = [
    { include = "flask_shortcut" }
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
click = "^7.1"
importlib-metadata = "^1.6"
xmltodict = "^0.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
requests = "^2.23"
sphinx = "^3.0, != 3.0.2"
Pallets-Sphinx-Themes = "^1.2"
mypy = "^*"
pytest-coverage = "*"
bandit = "^1.6"
liccheck = "^0.4"
safety = "^1.8"

[tool.liccheck]
authorized_licenses = [
  "bsd",
  "mit",
  "apache software"
]
unauthorized_licenses = ["gpl"]

[tool.black]
target-version = ["py36"]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
